kubernetes/backend-services.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
      - name: notification-service
        image: <SEU_REGISTRO_DE_IMAGEM>/notification-service:latest
        ports:
        - containerPort: 8003
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
spec:
  selector:
    app: notification-service
  ports:
  - port: 8003
    targetPort: 8003
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: policy-engine-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: policy-engine
  template:
    metadata:
      labels:
        app: policy-engine
    spec:
      containers:
      - name: policy-engine
        image: <SEU_REGISTRO_DE_IMAGEM>/policy-engine-service:latest
        ports:
        - containerPort: 8002
---
apiVersion: v1
kind: Service
metadata:
  name: policy-engine-service
spec:
  selector:
    app: policy-engine
  ports:
  - port: 8002
    targetPort: 8002
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: collector-service-deployment
spec:
  replicas: 1 # Geralmente, a coleta não precisa de HA, mas pode ser escalada se necessário
  selector:
    matchLabels:
      app: collector-service
  template:
    metadata:
      labels:
        app: collector-service
    spec:
      containers:
      - name: collector-service
        image: <SEU_REGISTRO_DE_IMAGEM>/collector-service:latest
        ports:
        - containerPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: collector-service
spec:
  selector:
    app: collector-service
  ports:
  - port: 8001
    targetPort: 8001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
      - name: api-gateway
        image: <SEU_REGISTRO_DE_IMAGEM>/api-gateway-service:latest
        ports:
        - containerPort: 8050
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-service
spec:
  selector:
    app: api-gateway
  ports:
  - port: 8050
    targetPort: 8050
