kubernetes/vault.yml
apiVersion: v1
kind: Service
metadata:
  name: vault-service
spec:
  selector:
    app: vault
  ports:
  - protocol: TCP
    port: 8200
    targetPort: 8200
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: vault
spec:
  serviceName: "vault"
  replicas: 1 # Para HA, o Vault requer um setup mais complexo com Consul/etcd
  selector:
    matchLabels:
      app: vault
  template:
    metadata:
      labels:
        app: vault
    spec:
      containers:
      - name: vault
        image: hashicorp/vault:1.15
        ports:
        - containerPort: 8200
        securityContext:
          capabilities:
            add:
            - "IPC_LOCK"
